tests/ui/type-alias-impl-trait/escaping-bound-var.stderr
error[E0657]: `impl Trait` cannot capture higher-ranked lifetime from outer `impl Trait`
  --> $DIR/escaping-bound-var.rs:9:47
   |
LL | pub type Foo = impl for<'a> Trait<'a, Assoc = impl Test<'a>>;
   |                                               ^^^^^^^^^^^^^ `impl Trait` implicitly captures all lifetimes in scope
   |
note: lifetime declared here
  --> $DIR/escaping-bound-var.rs:9:25
   |
LL | pub type Foo = impl for<'a> Trait<'a, Assoc = impl Test<'a>>;
   |                         ^^

error[E0792]: expected generic lifetime parameter, found `'static`
  --> $DIR/escaping-bound-var.rs:19:5
   |
LL | pub type Foo = impl for<'a> Trait<'a, Assoc = impl Test<'a>>;
   |                         -- cannot use static lifetime; use a bound lifetime instead or remove the lifetime parameter from the opaque type
...
LL |     ()
   |     ^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0657, E0792.
For more information about an error, try `rustc --explain E0657`.
